2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::doContinue): Remove pending stop
	when deal with breakpoint.

2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::markPendingStops): Mark iterated
	thread, not exclusion thread.

2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::markPendingStops): Use iterated
	thread, not exclusion thread for check.

2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::getStopInstr): More detailed error
	message.

2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::markPendingStops): More debug
	messages.
	(GdbServer::getStopInstr): Likewise.

2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::pendingStop): Added
	debug message.
	(GdbServer::markPendingStops): Likewise.
	(GdbServer::removePendingStop): Likewise.

2014-03-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	*  src/GdbServer.cpp (GdbServer::doFileIO): Print instruction on
	problem.

2014-03-18  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp: Pass thread, not thread ID to
	redirectStdioOnTrap throughout.
	(GdbServer::redirectStdioOnTrap): Take thread, not thread ID as
	argument.
	(GdbServer::markPendingStops): Only mark pending if at BREAK
	instruction.
	(GdbServer::getStopInstr): Created.
	(GdbServer::doFileIO): Take thread, not thread ID as argument, use
	getStopInstr to get any stop instruction.
	* src/GdbServer.h: Change getFileIO and redirectStdioOnTrap to
	take thread, not thread ID.  Ad getStopInstr.

2014-03-18  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::rspVCont): Correct minor compiler
	errors.
	(GdbServer::extractVContAction): Likewise.
	* src/GdbServer.h: Add declaration of mPendingStops;

2014-03-18  Jeremy Bennett  <jeremy.bennett@embecosm.com>
